--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "i18next": "^22.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.1.1",
     "sass": "^1.56.2"
   },
   "devDependencies": {
