--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.1",
+    "react-scroll": "^1.8.9",
     "sass": "^1.56.2"
   },
   "devDependencies": {
