animacion al scroll, formulario funcionando

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formspree/react": "^2.4.1",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
@@ -18,7 +19,8 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.1",
     "react-scroll": "^1.8.9",
-    "sass": "^1.56.2"
+    "sass": "^1.56.2",
+    "scrollreveal": "^4.0.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
