--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.1",
+    "react-icons": "^4.9.0",
     "react-scroll": "^1.8.9",
     "sass": "^1.56.2",
     "scrollreveal": "^4.0.9"
